--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Open graph meta data -->
+    <meta property="og:title" content="Check out this amazing book!" />
+    <meta name="twitter:title" content="Check out this amazing book!" />
+    <meta property="og:description" content="Animesh share a book with you." />
+    <meta property="og:image" itemprop="image" content="https://images.app.goo.gl/Nzg1kKwumfDiR3qB8" />
+    <meta property="og:url" content="https://images.app.goo.gl/Nzg1kKwumfDiR3qB8" />
+    <meta property="og:type" content="website" />
+    
     <title>Vite + React</title>
   </head>
   <body>
